# glom-dict

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  duties.py  index.html  macros.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml
changelog/: index.html
contributing/: index.html
coverage/: index.html  tmp.html
credits/: index.html
license/: index.html
search/: search_index.json
src/glom_dict/: __init__.py  __main__.py
tests/: __init__.py  test_basic.py
