[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "glom-dict"
version = "0.0.1a1"
description = "Custom Dictionary with glom get, set and del methods"
authors = ["Gabriel <gabriel59kg@gmail.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/kilo59/glom-dict"
homepage = "https://github.com/kilo59/glom-dict"
keywords = ["glom", "dict", "nested"]
packages = [ { include = "glom_dict", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.6.2"
glom = "^20.11.0"

[tool.poetry.dev-dependencies]
# formatting, quality, tests
black = "^22.3.0"
isort = "^5.7.0"
mypy = "^0.961"
pytest = "^7"
pytest-cov = "^2.11.1"
pytest-sugar = "^0.9.4"
pytest-icdiff = "^0.5"

# tasks
duty = "^0.7.0"
git-changelog = "^0.4.2"
httpx = "^0.16.1"
jinja2-cli = "^0.7.0"
toml = "^0.10.2"

# linting
prospector = "^1.5"

# docs
mkdocs = "^1.3.0"
MarkupSafe = "=2.0.1" # fix missing `soft_unicode` error 
mkdocs-coverage = "^0.2.1"
mkdocs-macros-plugin = "^0.5.0"
mkdocs-material = "^6.2.7"
mkdocstrings = "^0.15.0"

[tool.isort]
known_first_party = "glom_dict"
profile = "black"
